[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picl"
version = "0.1.0"
description = "A programming language"
readme = "README.md"
authors = [{ name = "dragoncoder047", email = "101021094+dragoncoder047@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 4 - Beta',
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/dragoncoder047/pickle"